--- a/InfoQuiver/build.properties
+++ b/InfoQuiver/build.properties
@@ -45,6 +45,7 @@ torque.home = ${application.root}
 torque.compile.build.dir = ${torque.home}/build
 torque.schema.dir = ${torque.home}/src/schema
 torque.templatePath = ${torque.home}/src/templates
+torque.sql.dir = ${torque.home}/src/sql
 
 # -------------------------------------------------------------------
 #
