--- a/InfoQuiver/build.xml
+++ b/InfoQuiver/build.xml
@@ -112,18 +112,27 @@
 		<ant antfile="build-torque.xml" target="create-db" inheritAll="false"/>
 		<ant antfile="build-torque.xml" target="insert-sql" inheritAll="false"/>
 		<antcall target="id_table_init"/>
+		<delete>
+			<fileset dir="${torque.sql.dir}" includes="**/*.sql **/*.generation"/>
+		</delete>
 	</target>
 	
 <!-- ================================================================================================= -->
 	<target name="datadump_export" description="Creates a complete xml data dump of your database">
 		<ant antfile="build-torque.xml" target="datadtd" inheritAll="false"/>
-		<ant antfile="build-torque.xml" target="datadump" inheritAll="false"/>
+		<ant antfile="build-torque.xml" target="datadump" inheritAll="false">
+			<property name="outputDirectory" value="${torque.schema.dir}"/>
+		</ant>
+		
+		<move file="${torque.schema.dir}/${torque.project}-${torque.project}-all-data.xml" tofile="${torque.schema.dir}/${torque.project}-data.xml"/>
 	</target>	
 
 
 <!-- ================================================================================================= -->
 	<target name="datadump_import" description="Creates a complete xml data dump of your database">
-		<ant antfile="build-torque.xml" target="datasql" inheritAll="false"/>
+		<ant antfile="build-torque.xml" target="datasql" inheritAll="false">
+			<property name="outputDirectory" value="${torque.sql.dir}"/>
+		</ant>
 		<ant antfile="build-torque.xml" target="insert-sql" inheritAll="false"/>
 	</target>	
 </project>
