--- a/InfoQuiver/src/conf/log.properties
+++ b/InfoQuiver/src/conf/log.properties
@@ -10,7 +10,7 @@ org.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4JLogger
 log4j.rootLogger = INFO, iquiver
 
 log4j.category.net.sf.iquiver = DEBUG
-log4j.additivity.org.apache.iquiver = false
+log4j.additivity.net.sf.iquiver = false
 
 log4j.appender.iquiver = org.apache.log4j.ConsoleAppender
 log4j.appender.iquiver.layout = org.apache.log4j.PatternLayout
