*** empty log message ***

--- a/InfoQuiver/build.properties
+++ b/InfoQuiver/build.properties
@@ -7,6 +7,10 @@ lib.dir = ${application.root}/lib
 doc.dir = ${application.root}/docs
 javadoc.dir = ${doc.dir}/javadoc
 
+remote.pkg=sf.net.iquiver.remote
+remote.soap.pkg=${remote.pkg}.soap
+remote.rmi.pkg=${remote.pkg}.rmi
+
 compile.deprecation = off
 compile.optimize = off
 compile.debug = on
