*** empty log message ***

--- a/InfoQuiver/build.properties
+++ b/InfoQuiver/build.properties
@@ -7,7 +7,7 @@ lib.dir = ${application.root}/lib
 doc.dir = ${application.root}/docs
 javadoc.dir = ${doc.dir}/javadoc
 
-remote.pkg=sf.net.iquiver.remote
+remote.pkg=net.sf.iquiver.remote
 remote.soap.pkg=${remote.pkg}.soap
 remote.rmi.pkg=${remote.pkg}.rmi
 
