--- a/InfoQuiver/build.xml
+++ b/InfoQuiver/build.xml
@@ -137,25 +137,44 @@
 
 	<!-- ================================================================================================= -->
 	<target name="generate_soap_skeleton" description="Creates SOAP stubs and skeletons for server and client">
-		<java2wsdl bindingname="IQuiverSoapBinding" classname="net.sf.iquiver.remote.soap.IWebService" location="http://localhost:8080/simpleservice/services/IQuiver" namespace="http://iquiver" output="iquiver.wsdl" porttypename="IQuiver" stopclasses="java.*,javax.*," useinheritedmethods="false">
-			<mapping namespace="http://iquiver" package="net.sf.iquiver.remote.soap" />
+		<java2wsdl bindingname="IQuiverSoapBinding" classname="net.sf.iquiver.remote.soap.IWebService" location="http://localhost:8080/simpleservice/services/IQuiver" namespace="http://iquiver" output="iquiver.wsdl" porttypename="IQuiver" useinheritedmethods="false"
+            stopclasses="java.*,javax.*,org.apache.torque.*">
+			<!-- <mapping namespace="http://iquiver" package="net.sf.iquiver.remote.soap.impl" /> -->
+            <mapping namespace="http://iquiver" package="net.sf.iquiver" />
+            <mapping namespace="http://iquiver.om" package="net.sf.iquiver.om" />
+            <mapping namespace="http://iquiver.om.cache" package="net.sf.iquiver.om.cache" />
+            <mapping namespace="http://iquiver.util.om" package="net.sf.iquiver.util.om" />
+            <mapping namespace="http://iquiver.torque.om" package="org.apache.torque.om" />
+            <mapping namespace="http://iquiver.torque.util" package="org.apache.torque.util" />            
+            <mapping namespace="http://iquiver.xml_soap" package="org.apache.xml.xml_soap" />            
 		</java2wsdl>
-
+        
 		<ant target="awk" inheritAll="false">
 			<property name="awk.scriptfile" value="src/awk/wsdl.awk" />
 			<property name="awk.targetfile" value="iquiver.wsdl" />
 		</ant>
-
-		<package2path name="soapPackagePath" package="${remote.soap.pkg}.impl" />
+        
+		<!--
+        <package2path name="soapPackagePath" package="${remote.soap.pkg}.impl" />
 		<echo message="Using path: ${soapPackagePath}" />
-		<!-- 
-        <dirname property="soapPath" file="${java.dir}/${soapPackagePath}/IBaseWebService.java"/>
-        <echo message="${soapPath}"/>
-         -->
+        -->
 
-		<wsdl2java debug="true" helperGen="false" noimports="false" output="${java.dir}/${soapPackagePath}" skeletonDeploy="false" url="iquiver.wsdl" verbose="true">
-			<mapping namespace="http://iquiver" package="net.sf.iquiver.remote.soap" />
-		</wsdl2java>
+        <wsdl2java debug="false" 
+            helperGen="false" 
+            noimports="false" 
+            output="${java.dir}" 
+            url="iquiver.wsdl" 
+            verbose="true">
+	            <mapping namespace="http://iquiver-impl" package="${remote.soap.pkg}.impl"/>
+	            <mapping namespace="http://iquiver-intf" package="${remote.soap.pkg}.impl"/>
+	            <mapping namespace="http://iquiver" package="${remote.soap.pkg}.impl"/>
+                <mapping namespace="http://iquiver.om" package="${remote.soap.pkg}.impl.om" />
+                <mapping namespace="http://iquiver.om.cache" package="${remote.soap.pkg}.impl.om.cache" />
+                <mapping namespace="http://iquiver.util.om" package="${remote.soap.pkg}.impl.util.om" />
+                <mapping namespace="http://iquiver.torque.om" package="${remote.soap.pkg}.impl.torque.om" />
+                <mapping namespace="http://iquiver.torque.util" package="${remote.soap.pkg}.impl.torque.util" />            
+                <mapping namespace="http://iquiver.xml_soap" package="${remote.soap.pkg}.impl.xml_soap" />                                            
+            </wsdl2java>
 
 	</target>
 
