*** empty log message ***

--- a/InfoQuiver/src/conf/cache.properties
+++ b/InfoQuiver/src/conf/cache.properties
@@ -1,8 +1,7 @@
 # -------------------------------------------------------------------
 #
 # This is the configuration file for the cache used by IQuiver.
-# The cache implementation uses SwarmCache.
-# see http://swarmcache.sourceforge.net
+# The cache implementation uses SwarmCache see http://swarmcache.sourceforge.net.
 # We want to to express our gratitude to John Watkinson - the author of SwarmCache -
 # and all contributors of that great, simple in use but powerful cache implementation.
 #
