*** empty log message ***

--- a/InfoQuiver/src/conf/cache.properties
+++ b/InfoQuiver/src/conf/cache.properties
@@ -1,7 +1,8 @@
 # -------------------------------------------------------------------
 #
 # This is the configuration file for the cache used by IQuiver.
-# The cache implementation uses SwarmCache see http://swarmcache.sourceforge.net.
+# The cache implementation uses SwarmCache.
+# see http://swarmcache.sourceforge.net
 # We want to to express our gratitude to John Watkinson - the author of SwarmCache -
 # and all contributors of that great, simple in use but powerful cache implementation.
 #
@@ -18,17 +19,15 @@ cache.type = Hybrid
 #cache.type = Auto
 #cache.type = Timer
 
-
 ## cache.size ##
 ## cache size default is 10000, the value is ignored if cache type is set to Auto or Timer
 ## the cache size is measured in number of objects not bytes!
 #cache.size = 10000
 
-
 ## cache.multicast.ip ##
 ## the multicast IP address that will be used to communicate between cache managers,
 ## default is 231.12.21.132
-#cache.multicast.ip = 231.12.21.132
+#cache.multicast.ip = 192.168.20.50
 
 
 ## cache.enabledAtStartup ##
@@ -59,4 +58,4 @@ cache.enableCacheForCriteriaSelects = true
 ## cache.excludeEnableCacheForCriteriaSelects ##
 ## Ignore CacheBackedPeers when enabling the CriteriaResultListCache at startup
 ## This is a comma separated list of full object type names and/or regexpressions
-#cache.excludeEnableCacheForCriteriaSelects = 
+cache.excludeEnableCacheForCriteriaSelects = 
