--- a/InfoQuiver/src/conf/cache.properties
+++ b/InfoQuiver/src/conf/cache.properties
@@ -24,8 +24,17 @@ cache.type = Hybrid
 ## the cache size is measured in number of objects not bytes!
 #cache.size = 10000
 
+## jgroups configuration string ##
+## default is UDP(mcast_addr=*.*.*.*;mcast_port=45566;ip_ttl=32;mcast_send_buf_size=150000;mcast_recv_buf_size=80000):
+## PING(timeout=2000;num_initial_members=3):MERGE2(min_interval=5000;max_interval=10000):
+## FD_SOCK:VERIFY_SUSPECT(timeout=1500):pbcast.NAKACK(gc_lag=50;retransmit_timeout=300,600,1200,2400,4800):
+## UNICAST(timeout=5000):pbcast.STABLE(desired_avg_gossip=20000):FRAG(frag_size=8096;down_thread=false;up_thread=false):
+## pbcast.GMS(join_timeout=5000;join_retry_timeout=2000;shun=false;print_local_addr=true) ##
+#cache.multicast.properties = 
+
 ## cache.multicast.ip ##
 ## the multicast IP address that will be used to communicate between cache managers,
+## will only be used if cache.multicast.properties is not set 
 ## default is 231.12.21.132
 #cache.multicast.ip = 192.168.20.50
 
