*** empty log message ***

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -7,6 +7,12 @@
 #
 # -------------------------------------------------------------------
 
-server.rmi=true
-server.soap=true
-server.soap.port=81
+startRemoteInterfaces=net.sf.iquiver.remote.xmlrpc.XmlRpcServer
+
+## port setting for the default XmlRpcServer implementation ##
+## default is 80 ##
+#net.sf.iquiver.remote.xmlrpc.XmlRpcServer.port =
+
+## session timeout the started remote server interfaces in seconds ##
+## default is 300 ##
+#remote.session.timeout =
