--- a/InfoQuiver/src/conf/log.properties
+++ b/InfoQuiver/src/conf/log.properties
@@ -7,7 +7,7 @@ org.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4JLogger
 #
 # log4j config
 #
-log4j.rootLogger = INFO, iquiver
+log4j.rootLogger = DEBUG, iquiver
 
 log4j.category.net.sf.iquiver = DEBUG
 log4j.additivity.net.sf.iquiver = false
