--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -7,6 +7,23 @@
 #
 # -------------------------------------------------------------------
 
+######################
+## cluster settings ##
+######################
+
+## enable support for to communicate with other ##
+## iquiver instances in the network ##
+cluster.enable = true
+
+## jgroups configuration string ##
+cluster.multicast.properties = UDP(mcast_addr=228.1.2.3;mcast_port=55555;ip_ttl=32;mcast_send_buf_size=150000;mcast_recv_buf_size=80000):PING(timeout=2000;num_initial_members=3):MERGE2(min_interval=5000;max_interval=10000):FD_SOCK:VERIFY_SUSPECT(timeout=1500):pbcast.NAKACK(gc_lag=50;retransmit_timeout=300,600,1200,2400,4800):UNICAST(timeout=5000):pbcast.STABLE(desired_avg_gossip=20000):FRAG(frag_size=8096;down_thread=false;up_thread=false):pbcast.GMS(join_timeout=5000;join_retry_timeout=2000;shun=false;print_local_addr=true)
+
+#######################
+## remote interfaces ##
+#######################
+
+## remote server interfaces to start ##
+## these interfaces are servers used to communicate with client applications ##
 startRemoteInterfaces=net.sf.iquiver.remote.xmlrpc.XmlRpcServer
 
 ## port setting for the default XmlRpcServer implementation ##
