--- a/InfoQuiver/build.xml
+++ b/InfoQuiver/build.xml
@@ -98,14 +98,14 @@
 	<!-- ================================================================================================= -->
 	<target name="create_db" description="Creates the database from your schema.xml">
         <delete failonerror="false">
-            <fileset dir="${torque.sql.dir}" includes="**/*.sql,**/*.map"/>
+            <fileset dir="${torque.sql.dir}" includes="**/*.sql,**/*.map" excludes="**/*-data.sql,**/.cvsignore"/>
           </delete>
 		<ant antfile="build-torque.xml" target="sql" inheritAll="false" />
 		<ant antfile="build-torque.xml" target="create-db" inheritAll="false" />
 		<ant antfile="build-torque.xml" target="insert-sql" inheritAll="false" />
 		<antcall target="id_table_init" />
         <delete failonerror="false">
-			<fileset dir="" excludes="**/*-data.sql,**/.cvsignore,**/*.db.map" includes="**/*.sql **/*.generation" />
+			<fileset dir="${torque.sql.dir}" includes="**/*.sql,**/*.map,**/*.generation" excludes="**/*-data.sql,**/.cvsignore"/>
 		</delete>
 	</target>
 
