--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -18,6 +18,25 @@ cluster.enable = true
 ## jgroups configuration string ##
 cluster.multicast.properties = UDP(mcast_addr=228.1.2.3;mcast_port=55555;ip_ttl=32;mcast_send_buf_size=150000;mcast_recv_buf_size=80000):PING(timeout=2000;num_initial_members=3):MERGE2(min_interval=5000;max_interval=10000):FD_SOCK:VERIFY_SUSPECT(timeout=1500):pbcast.NAKACK(gc_lag=50;retransmit_timeout=300,600,1200,2400,4800):UNICAST(timeout=5000):pbcast.STABLE(desired_avg_gossip=20000):FRAG(frag_size=8096;down_thread=false;up_thread=false):pbcast.GMS(join_timeout=5000;join_retry_timeout=2000;shun=false;print_local_addr=true)
 
+###########################
+## service configuration ##
+###########################
+
+service.ContentFetchService=net.sf.iquiver.service.impl.ContentFetchService
+service.ContentFetchService.autostart=true
+service.ContentFetchService.restartOnFailure=3
+
+service.ContentSearchService=net.sf.iquiver.service.impl.ContentSearchService
+service.ContentSearchService.autostart=false
+service.ContentSearchService.schedule=00:00:00,ONCE #ONCE|DAYLY|WEEKLY|EVERY
+service.ContentSearchService.restartOnFailure=3
+
+service.ContentCollectorService=net.sf.iquiver.service.impl.ContentCollectorService
+service.ContentCollectorService.autostart=false
+service.ContentCollectorService.schedule=03:30:00,ONCE
+service.ContentCollectorService.restartOnFailure=3
+
+
 #######################
 ## remote interfaces ##
 #######################
