--- a/InfoQuiver/project.properties
+++ b/InfoQuiver/project.properties
@@ -2,26 +2,43 @@
 # P R O J E C T  P R O P E R T I E S
 # -------------------------------------------------------------------
 
-maven.final.name = maven
-maven.build.dir = ${basedir}/target
-maven.gen.docs = ${maven.build.dir}/generated-xdocs
-
-# This is to test a feature where a value is defined in a properties file
-# and is available for use inside the POM.
-pomProperty = value
-
-# -------------------------------------------------------------------
-# X D O C  P R O P E R T I E S
-# -------------------------------------------------------------------
-# Display the date on the Maven web site
 maven.xdoc.date = left
-maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 
-# Display the maven version the web site is documenting
-maven.xdoc.version = ${pom.currentVersion}
+maven.ui.body.background = #FFFFFF
+maven.ui.body.foreground = #1F354D
+maven.ui.section.background = #A2B7C5
+maven.ui.section.foreground = #FFFFFF
+maven.ui.subsection.background = #F2F5F7
+maven.ui.subsection.foreground = #1F354D
 
-#------------------------------------------------------------------
-# H T M L 2 X D O C   P R O P E R T I E S
-#------------------------------------------------------------------
-maven.html2xdoc.enable=true
+maven.ui.table.header.background = #E5E3DB
+maven.ui.table.header.foreground = #686868
+maven.ui.table.row.odd.background = #F5F4F1
+maven.ui.table.row.odd.foreground = #686868
+maven.ui.table.row.even.background = #F5F4F1
+maven.ui.table.row.even.foreground = #686868
 
+maven.ui.banner.background = #FFFFFF
+maven.ui.banner.foreground = #FFFFFF
+maven.ui.banner.border.top = #A2B7C5
+maven.ui.banner.border.bottom = #A2B7C5
+maven.ui.source.background = #FFFFFF
+maven.ui.source.foreground = #000000
+maven.ui.source.border.right = #A2B7C5
+maven.ui.source.border.left = #A2B7C5
+maven.ui.source.border.top = #A2B7C5
+maven.ui.source.border.bottom = #A2B7C5
+maven.ui.navcol.background = #F2F5F7
+maven.ui.navcol.background.ns4 = #F2F5F7
+maven.ui.navcol.foreground = #000000
+maven.ui.navcol.foreground.ns4 = #555
+maven.ui.navcol.border.top = #F2F5F7
+maven.ui.navcol.border.right = #A2B7C5
+maven.ui.navcol.border.bottom = #A2B7C5
+maven.ui.breadcrumbs.background = #D5E1E9
+maven.ui.breadcrumbs.foreground = #000000
+maven.ui.breadcrumbs.border.top = #D5E1E9
+maven.ui.breadcrumbs.border.bottom = #A2B7C5
+maven.ui.href.link = #1F354D
+maven.ui.href.link.active = #FF5A00
+maven.ui.href.link.selfref = #1F354D
