*** empty log message ***

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -26,15 +26,15 @@ service.ContentFetchService=net.sf.iquiver.service.impl.ContentFetchService
 service.ContentFetchService.autostart=true
 service.ContentFetchService.restartOnFailure=3
 
-service.ContentSearchService=net.sf.iquiver.service.impl.ContentSearchService
-service.ContentSearchService.autostart=false
-service.ContentSearchService.schedule=00:00:00,ONCE #ONCE|DAYLY|WEEKLY|EVERY
-service.ContentSearchService.restartOnFailure=3
+#service.ContentSearchService=net.sf.iquiver.service.impl.ContentSearchService
+#service.ContentSearchService.autostart=false
+#service.ContentSearchService.schedule=00:00:00,ONCE #ONCE|DAYLY|WEEKLY|EVERY
+#service.ContentSearchService.restartOnFailure=3
 
-service.ContentCollectorService=net.sf.iquiver.service.impl.ContentCollectorService
-service.ContentCollectorService.autostart=false
-service.ContentCollectorService.schedule=03:30:00,ONCE
-service.ContentCollectorService.restartOnFailure=3
+#service.ContentCollectorService=net.sf.iquiver.service.impl.ContentCollectorService
+#service.ContentCollectorService.autostart=false
+#service.ContentCollectorService.schedule=03:30:00,ONCE
+#service.ContentCollectorService.restartOnFailure=3
 
 
 #######################
