*** empty log message ***

--- a/InfoQuiver/src/conf/log.properties
+++ b/InfoQuiver/src/conf/log.properties
@@ -7,11 +7,11 @@ org.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4JLogger
 #
 # log4j config
 #
-log4j.rootLogger = DEBUG, iquiver
-
-log4j.category.net.sf.iquiver = DEBUG
-log4j.additivity.net.sf.iquiver = false
+log4j.rootLogger = INFO, iquiver
 
 log4j.appender.iquiver = org.apache.log4j.ConsoleAppender
 log4j.appender.iquiver.layout = org.apache.log4j.PatternLayout
 log4j.appender.iquiver.layout.conversionPattern = %d [%t] %-5p %c - %m%n
+
+log4j.category.net.sf.iquiver = DEBUG
+log4j.category.net.sf.iquiver.om = WARN
