--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -31,10 +31,10 @@ service.ContentFetchService.restartOnFailure=3
 #service.ContentSearchService.schedule=00:00:00,ONCE #ONCE|DAYLY|WEEKLY|EVERY
 #service.ContentSearchService.restartOnFailure=3
 
-#service.ContentCollectorService=net.sf.iquiver.service.impl.ContentCollectorService
-#service.ContentCollectorService.autostart=false
-#service.ContentCollectorService.schedule=03:30:00,ONCE
-#service.ContentCollectorService.restartOnFailure=3
+service.ContentCollectorService=net.sf.iquiver.service.impl.ContentCollectorService
+service.ContentCollectorService.autostart=true
+service.ContentCollectorService.schedule=03:30:00,DAYLY
+service.ContentCollectorService.restartOnFailure=3
 
 
 #######################
