--- a/InfoQuiver/src/conf/torque.properties
+++ b/InfoQuiver/src/conf/torque.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: torque.properties,v 1.1 2004/03/08 17:41:44 netseeker Exp $
+# $Id: torque.properties,v 1.2 2004/07/17 15:15:45 netseeker Exp $
 #
 # This is the configuration file for Torque.
 #
@@ -73,8 +73,9 @@ torque.database.iquiver.adapter=mysql
 #torque.dsfactory.iquiver.factory=org.apache.torque.dsfactory.PerUserPoolDataSourceFactory
 torque.dsfactory.iquiver.factory=org.apache.torque.dsfactory.SharedPoolDataSourceFactory
 torque.dsfactory.iquiver.pool.maxActive=30
-torque.dsfactory.iquiver.pool.testOnBorrow=true
+#torque.dsfactory.iquiver.pool.testOnBorrow="true"
 torque.dsfactory.iquiver.pool.validationQuery=SELECT 1
+torque.dsfactory.iquiver.pool.connectionWaitTimeout=10
 torque.dsfactory.iquiver.connection.driver = org.gjt.mm.mysql.Driver
 torque.dsfactory.iquiver.connection.url = jdbc:mysql://localhost:3306/iquiver
 torque.dsfactory.iquiver.connection.user = root
