*** empty log message ***

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -10,6 +10,8 @@
 ## path to the directory where the lucene search index should be created
 lucene.index.path = lucene-index
 
+## base directory for all report related stuff
+reports.directory = reports
 
 ######################
 ## cluster settings ##
