added ReportCompileService autostart

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -28,13 +28,17 @@ cluster.multicast.properties = UDP(mcast_addr=228.1.2.3;mcast_port=55555;ip_ttl=
 ## service configuration ##
 ###########################
 
+service.ReportCompileService=net.sf.iquiver.service.impl.ReportCompileService
+service.ReportCompileService.autostart=true
+service.ReportCompileService.restartOnFailure=3
+
 service.ContentFetchService=net.sf.iquiver.service.impl.ContentFetchService
 service.ContentFetchService.autostart=true
 service.ContentFetchService.restartOnFailure=3
 
 #service.ContentSearchService=net.sf.iquiver.service.impl.ContentSearchService
 #service.ContentSearchService.autostart=false
-#service.ContentSearchService.schedule=00:00:00,ONCE #ONCE|DAYLY|WEEKLY|EVERY
+#service.ContentSearchService.schedule=00:00:00,DAYLY #ONCE|DAYLY|WEEKLY|EVERY
 #service.ContentSearchService.restartOnFailure=3
 
 service.ContentCollectorService=net.sf.iquiver.service.impl.ContentCollectorService
