*** empty log message ***

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -12,6 +12,8 @@ lucene.index.path = lucene-index
 
 ## base directory for all report related stuff
 reports.directory = reports
+#reports.templates.searchresults = $reports/SearchResults.jrxml
+reports.templates.searchresults = src/reports/SearchResults.jrxml
 
 ######################
 ## cluster settings ##
