--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -12,8 +12,8 @@ lucene.index.path = lucene-index
 
 ## base directory for all report related stuff
 reports.directory = reports
-#reports.templates.searchresults = $reports/SearchResults.jrxml
-reports.templates.searchresults = src/reports/SearchResults.jrxml
+reports.templates.searchresults = ${reports.directory}/SearchResults
+#reports.templates.searchresults = src/reports/SearchResults.jrxml
 
 ######################
 ## cluster settings ##
