--- a/InfoQuiver/build.xml
+++ b/InfoQuiver/build.xml
@@ -5,8 +5,8 @@
     Edit build.properties instead. 
     
     $Source: /home/xubuntu/berlios_backup/github/tmp-cvs/infoquiver/Repository/InfoQuiver/build.xml,v $
-    $Date: 2004/07/17 17:51:03 $
-    $Revision: 1.17 $
+    $Date: 2004/07/21 22:33:34 $
+    $Revision: 1.18 $
 ================================================================= -->
 
 <project name="iquiver" default="compile" basedir=".">
@@ -141,7 +141,7 @@
 
     <!-- ================================================================================================= -->
     <target name="compile_reports" description="Compiles all jasper repo">
-        <jrc>
+        <jrc destdir="reports">
             <src>
                 <fileset dir="src/reports" includes="**/*.jrxml" excludes="**/*.gif,**/*.jpg,**/*.png,**/*.class,**/*.jasper" />
             </src>
